# t5.rs

./: .env.example  .gitattributes  .gitignore  Cargo.desktop.toml  Cargo.mobile.toml  Cargo.toml  Cargo.web.toml  Dioxus.pages.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  _config.yml  bun.lockb  fly.toml  index.html  jekyll.config.yml  main.css  mobile.toml  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/workflows/: android.yml  api.yml  build-api.yml  build-web.yml  deploy-api.yml  deploy-web.yml  linux.yml  web.yml  windows.yml
api/: Cargo.toml  diesel.toml
api/migrations/2024-05-08-002743_create_posts/: up.sql
api/src/: auth.rs  handlers.rs  main.rs  routes.rs
api/src/auth/: mod.rs
api/src/db/: mod.rs  models.rs
api/src/routes/: mod.rs
api/src/routes/handlers/: mod.rs
assets/: main.css
assets/dioxus/: t5-rs.js  t5-rs_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
common/: Cargo.toml
common/src/: lib.rs
src/: api.rs  lib.rs  ui.rs
src/auth/: client.rs  mod.rs
src/pages/: about.rs  home.rs  mod.rs
src/store/: local_storage.rs  mod.rs  rocks_db.rs
