workspace = { members = ["api"] }
[package]
name = "rs-mobile"
version = "0.1.0"
authors = ["Alberto Del Buono Paolini <alberto.delbuonopaolini@stud.unifi.it>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rs-mobile-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-activity-name = "com.example.rs_mobile.MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.6.1",
    "androidx.appcompat:appcompat:1.6.1",
    "com.google.android.material:material:1.8.0",
]
project-dependencies = ["org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"]
app-plugins = ["org.jetbrains.kotlin.android"]
app-permissions = ["android.permission.INTERNET"]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"
vulkan-validation = false

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_PACKAGE = "com.example.rs_mobile"
WRY_ANDROID_LIBRARY = "rs_mobile"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/com/example/rs_mobile"

[package.metadata.cargo-apple.ios]
frameworks = ["WebKit"]

[dependencies]
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.12.4", features = ["json"] }
async-recursion = "1.1.1"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TODO: figure out why switching these conditionally doesn't work
dioxus = { version = "0.5", features = ["mobile"] }
# dioxus = { version = "0.5", features = ["web"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21.0"
paste = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.5"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wry = "0.37"
tao = "0.26"
