[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "8.3.0"
common = { path = "../common" }
